--- a/sway/config
+++ b/sway/config
@@ -190,7 +190,7 @@ bindsym $mod+r mode "resize"
 # Special keys to adjust volume via PulseAudio
 bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
 bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -10%
-bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +10%
+bindsym --locked XF86AudioRaiseVolume exec pamixer -i 10 --set-limit 100
 bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
 
 # Special keys to adjust brightness via brightnessctl
